mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_invalid_type_annotation.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 2 errors found

error: Expected '=' after variable name
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_type_annotation.mux:2:7
   |
 2 | auto x: invalid = 5
   |       ^

error: Expected expression, found 'Colon'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_type_annotation.mux:2:7
   |
 2 | auto x: invalid = 5
   |       ^
